docs: README updated

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/traverse": "^7.8.6",
-    "@vue/compiler-core": "^3.0.0-alpha.9",
-    "@vue/compiler-dom": "^3.0.0-alpha.9",
+    "@vue/compiler-core": "3.0.0-alpha.9",
+    "@vue/compiler-dom": "3.0.0-alpha.9",
     "chalk": "^3.0.0",
     "commander": "^2.9.0",
     "core-js": "^2.6.11",
