--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/traverse": "^7.8.6",
+    "@babel/types": "^7.11.0",
     "@vue/compiler-core": "3.0.0-alpha.9",
     "@vue/compiler-dom": "3.0.0-alpha.9",
     "chalk": "^3.0.0",
